update port for heroku and also check port in main go

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,7 +27,7 @@ RUN go get -d -v ./...
 RUN go build -o todo-api .
 
 #EXPOSE the port
-EXPOSE 8000
+EXPOSE $PORT
 
 # Run the executable
 CMD ["./todo-api"]
