--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.1",
     "@angular/cli": "^17.3.2",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/compiler-cli": "^17.3.1",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.1",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-server": "^17.3.0",
